# seacloud-cli

./: .gitignore  .goreleaser.yml  Cargo.toml  Makefile  README.md  README.zh.md  build.rs  go.mod  go.sum  main.go  package.json
.github/workflows/: release.yml
cmd/: account.go  account_test.go  agent.go  agent_describe.go  agent_describe_test.go  ai_cli.go  ai_cli_test.go  auth.go  cli_helpers.go  fallback_curl_contract.go  help_text_test.go  images.go  json_output.go  json_output_test.go  llm.go  llm_admin_detail_fallback_test.go  llm_run_test.go  models.go  models_contract_test.go  reference_curl_execute.go  root.go  run.go  run_async.go  run_async_test.go  run_contract_test.go  run_contract_validation_test.go  run_llm.go  run_llm_contract_helpers_test.go  run_llm_test.go  run_local_file_extra_test.go  run_local_file_test.go  run_local_file_video_test.go  run_local_files.go  run_model.go  run_prerequisite_test.go  run_prerequisites.go  run_prerequisites_unit_test.go  run_provider_context_test.go  run_queue_failure_test.go  run_submit.go  (+20 more)
internal/account/: client.go  client_test.go
internal/admindetail/: client.go  client_test.go
internal/agentdescribe/: admin_detail_fallback_test.go  describe.go  describe_test.go  markdown.go  markdown_test.go  sandbox_template.go  sandbox_template_test.go
npm-bundles/: SHA256SUMS
scripts/: archive-extract.js  archive-extract.test.js  build.sh  gateway-skill-deploy.js  gateway-skill-deploy.test.js  postinstall.js  prepare-npm-bundles.js  seacloud-skills.js  seacloud.js
src/: main.rs
src/cmd/: auth.rs  (+12 more)
tests/: cli.rs
(+154 files in other folders)
