[package]
name = "seacloud-cli"
version = "0.0.15"
edition = "2021"
license = "MIT"
description = "SeaCloud CLI"

[[bin]]
name = "seacloud"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
dirs = "6"
keyring = "3"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
